objects/Tender__c.object
<CustomObject>
    <fields>
        <fullName>Award_Status__c</fullName>
        <label>Award Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Retained</fullName>
                </value>
                <value>
                    <fullName>Not Retained</fullName>
                </value>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Not Acquired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance checker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tenders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Banks__c</fullName>
        <label>Current Banks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absa Bank</fullName>
                </value>
                <value>
                    <fullName>African Bank Limited</fullName>
                </value>
                <value>
                    <fullName>First National Bank</fullName>
                </value>
                <value>
                    <fullName>FirstRand Bank</fullName>
                </value>
                <value>
                    <fullName>Nedbank Limited</fullName>
                </value>
                <value>
                    <fullName>Standard Bank of South Africa</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Award Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_income_value__c</fullName>
        <label>Estimated income  value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tenders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <label>Global</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation_In_Salesforce__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Relationship Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tenders</relationshipLabel>
        <relationshipName>Tenders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Cape</fullName>
                </value>
                <value>
                    <fullName>Free State</fullName>
                </value>
                <value>
                    <fullName>Gauteng</fullName>
                </value>
                <value>
                    <fullName>KwaZulu-Natal</fullName>
                </value>
                <value>
                    <fullName>Limpopo</fullName>
                </value>
                <value>
                    <fullName>Mpumalanga</fullName>
                </value>
                <value>
                    <fullName>Northern Cape</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Western Cape</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proof Reader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tenders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Disqualification__c</fullName>
        <label>Reason For Disqualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agri</fullName>
                </value>
                <value>
                    <fullName>All sectors</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>GDO</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Global Corporate</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Mauritius</fullName>
                </value>
                <value>
                    <fullName>Mid Corporate</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>Seychelles</fullName>
                </value>
                <value>
                    <fullName>Tanzania</fullName>
                </value>
                <value>
                    <fullName>Telecoms</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Zimbabwe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>CIBW</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Global Corporate</fullName>
                </value>
                <value>
                    <fullName>Global Development Organisation (GDO)</fullName>
                </value>
                <value>
                    <fullName>Large Local Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Tender Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tenders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Bid Submitted</fullName>
                </value>
                <value>
                    <fullName>Awaiting Award</fullName>
                </value>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Not Awarded</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Due_Date__c</fullName>
        <label>Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tender_Description__c</fullName>
        <label>Tender Description</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAF RFP</fullName>
                </value>
                <value>
                    <fullName>Card acquiring</fullName>
                </value>
                <value>
                    <fullName>Card Issuing</fullName>
                </value>
                <value>
                    <fullName>CIT RFP</fullName>
                </value>
                <value>
                    <fullName>Debt Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Investment Advisory</fullName>
                </value>
                <value>
                    <fullName>Lead Manager</fullName>
                </value>
                <value>
                    <fullName>Loan RFP</fullName>
                </value>
                <value>
                    <fullName>Presentation following the RFP</fullName>
                </value>
                <value>
                    <fullName>Proactive Proposal</fullName>
                </value>
                <value>
                    <fullName>Supplier Finance</fullName>
                </value>
                <value>
                    <fullName>Transactional Banking RFP</fullName>
                </value>
                <value>
                    <fullName>ZAR Clearing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender_Type__c</fullName>
        <description>This Picklist defines the type of tender is being Proposed</description>
        <label>Tender Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Proactive Proposal</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tender</label>
    <listViews>
        <fullName>All_Open_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Tenders</label>
    </listViews>
    <listViews>
        <fullName>All_Pipeline_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pipeline</value>
        </filters>
        <label>All Pipeline Tenders</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Bid Submitted</value>
        </filters>
        <label>All Submitted Tenders</label>
    </listViews>
    <listViews>
        <fullName>All_Tender</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Tender</label>
    </listViews>
    <listViews>
        <fullName>All_Tenders_Not_Awarded</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Awarded</value>
        </filters>
        <label>All Tenders Not Awarded</label>
    </listViews>
    <listViews>
        <fullName>All_Withdrawn_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Withdrawn</value>
        </filters>
        <label>All Withdrawn Tenders</label>
    </listViews>
    <listViews>
        <fullName>My_Awaiting_Award_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Award</value>
        </filters>
        <label>My Awaiting Award Tenders</label>
    </listViews>
    <listViews>
        <fullName>My_Disqualified_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Organisation_In_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Tender_Type__c</columns>
        <columns>Submission_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <label>My Disqualified Tenders</label>
    </listViews>
    <nameField>
        <displayFormat>T- {0000}</displayFormat>
        <label>Tender ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Description_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL( Tender_Description__c , &quot;Other&quot;), ISBLANK( Description__c  ) )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Please enter a description for the tender type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disqualified_Validator</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( Status__c , &apos;Disqualified&apos;), ISBLANK( Reason_For_Disqualification__c ))</errorConditionFormula>
        <errorDisplayField>Reason_For_Disqualification__c</errorDisplayField>
        <errorMessage>Please enter a reason for tender disqualification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Validator</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(Status__c, &quot;Awarded&quot;), ISBLANK(  Due_Date__c  ) )</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Please enter a tender reward due date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Validator</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( Status__c , &apos;Awarded&apos;), ISBLANK(   TEXT(Award_Status__c)   ))</errorConditionFormula>
        <errorDisplayField>Award_Status__c</errorDisplayField>
        <errorMessage>Please enter an award status</errorMessage>
    </validationRules>
</CustomObject>